--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   #   ports:
   #     - "3306:3306"
   #   environment:
-  #     MYSQL_DATABASE: blog
+  #     MYSQL_DATABASE: laravel
   #     MYSQL_ROOT_PASSWORD: password
   db:
     image: postgres:16.2
@@ -39,7 +39,7 @@ services:
 
   # Application Service
   app:
-    container_name: blog
+    container_name: php
     build:
       context: ./php
       dockerfile: Dockerfile
@@ -68,3 +68,6 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: chenjh2222@gmail.com
       PGADMIN_DEFAULT_PASSWORD: password
+# docker-compose up
+# docker-compose exec app composer install
+# docker-compose exec app php artisan key:generate
